--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/mariobalrod/mern-boilerplate#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.9.16",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
