--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/mariobalrod/mern-boilerplate#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0"
