--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/mariobalrod/mern-boilerplate#readme",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "is-empty": "^1.2.0",
     "mongoose": "^5.9.16",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
