--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "homepage": "https://github.com/mariobalrod/mern-boilerplate#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.26.0",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "validator": "^13.0.0"
